--- a/src/css/style.css
+++ b/src/css/style.css
@@ -521,13 +521,12 @@ VEIL
 	height:100%;
 	background-color:rgba(0,0,0,0.5);	
 	display:none;
-	opacity:0;
+	opacity:1;
 	position:absolute;
 	top:0px;
 	left:0px;
 	overflow:hidden;
 	z-index:3;
-	-webkit-transition: opacity 10s linear;
 }
 
 
@@ -950,15 +949,17 @@ ANIMATION LAYER
 */
 #animationLayer {
 	z-index:9;
-	display:block;
+	display:none;
 	position:absolute;
+	left:0px;
+	top:0px;
+	width:100%;
+	height:100%;
+	overflow:hidden;
 }
 #animationLayer .animationTile {
 	display:block;
 	position:absolute;
-	background-color:#0FF;
-	left:0px;
-	top:0px;
 }
 
 
