--- a/src/css/style.css
+++ b/src/css/style.css
@@ -519,16 +519,20 @@ VEIL
 #veil {
 	width:100%;
 	height:100%;
-	background-color:rgba(0,0,0,0.5);	
+	background-color:#000;
 	display:none;
-	opacity:1;
+	opacity:0;
 	position:absolute;
 	top:0px;
 	left:0px;
 	overflow:hidden;
 	z-index:3;
+
 }
 
+body {
+	overflow:hidden;	
+}
 
 
 
@@ -960,6 +964,12 @@ ANIMATION LAYER
 #animationLayer .animationTile {
 	display:block;
 	position:absolute;
+}
+
+#animationLayer .backingTile{
+	display:block;
+	position:absolute;
+	background-color:#000;
 }
 
 
