--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,7 +70,19 @@ PLANE
 	position:absolute;	
 }
 
-.categoryTitleBlockContainer{
+.categoryCellTitleContainer {
+	position:relative;
+}
+
+.categoryCellTitleBackground {
+	height:83px;
+	background-color:#FFF;
+	position:absolute;
+	top:1px;
+	left:0px;
+}
+
+.categoryCellTitleBlockContainer{
 	position:relative;
 	color:#000;
 	font-size:22px;
@@ -80,20 +92,9 @@ PLANE
 	left:1px;
 	margin:0px;
 	padding:0px;
-	
-}
-
-.categoryTitleBlockContainer span{
+	max-width:600px;
 	background:#FFF;
-	padding:8px;
-	display:inline;
-	float:left;
-	clear:both;
-	margin:-4px 0px 0px 0px;
-}
-
-.categoryTitleBlockContainer span:first-child{
-	margin:0px;
+	display:inline-block;
 }
 
 .categoryVeilContainer {
