Category Scrubber Update

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -101,6 +101,27 @@ PLANE
 	background-color:rgba(0,0,0,0.666);
 }
 
+#category-scrubber-track {
+	display:block;
+	position:absolute;
+	height:100%;
+	width:42px;
+	right:-42px;
+	top:0px;
+	background-color:rgba(0,0,0,0.5);
+}
+
+#category-scrubber-thumb {
+	display:block;
+	position:absolute;
+	width:42px;
+	height:86px;
+	right:0px;
+	top:0px;
+	background-image:url(../images/categoryScrubberThumbOff.png);
+}
+
+
 /**
 TILES
 //________________________________________________________
